--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mapbox/polyline": "^1.2.1",
     "@mui/icons-material": "^6.1.2",
     "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.2",
@@ -18,10 +19,12 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "instead": "^1.0.3",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
