--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-split": "^2.0.14",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
