--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/styles": "^6.1.2",
     "@mui/x-date-pickers": "^7.20.0",
     "@react-google-maps/api": "^2.20.3",
+    "@react-leaflet/core": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +21,7 @@
     "dayjs": "^1.11.13",
     "instead": "^1.0.3",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "polyline": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
