--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
     "instead": "^1.0.3",
     "leaflet": "^1.9.4",
@@ -29,11 +30,13 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
     "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
     "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
