--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
+    "daisyui": "^4.12.23",
     "dayjs": "^1.11.13",
     "instead": "^1.0.3",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lucide-react": "^0.469.0",
     "polyline": "^0.2.0",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
@@ -39,6 +44,8 @@
     "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
     "remark-gfm": "^4.0.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
